	* Silenced gcc -Weffc++ warnings. Thanks Sven Fischer for the report

v47 2024-01-01

	* Coroutines are conditionally supported by the __cpp_impl_coroutine
	  feature test macro. There is no longer any need to define the
	  TROMPELOEIL_EXPERIMENTAL_COROUTINES macro in order to use coroutines
	  with Trompeloeil.

	* Split the monolithic "trompeloeil.hpp" into several smaller
	  headers. You can continue to #include <trompeloeil.hpp> as usual,
	  but you can also do more fine grained #include:s, which may
	  improve build times. E.g.:

	      #include <trompeloeil/mock.hpp> // basic mock functionality
	      #include <trompeloeil/lifetime.hpp> // REQUIRE_DESTRUCTION etc.
	      #include <trompeloeil/matcher/re.hpp> // regular expressions

	  The reference manual says which header to include to get the
	  functionality for each item. If no header is mentioned, it is in
	  <trompeleil/mock.hpp>

v46 2023-11-06

	* Experimental support for coroutines. Use CO_RETURN (or LR_CO_RETURN)
	  for a member function that has a coroutine return type. Use CO_THROW
	  (or LR_CO_THROW) to throw from a coroutine. Use as many CO_YIELD
	  (or LR_CO_YIELD) from a coroutine function as you like, as long as the
	  promise type supports it.

	  The experimental support must be explicitly enabled with

	    #define TROMPELOEIL_EXPERIMENTAL_COROUTINES
	    #include <trompeloeil.hpp>

	  alternatively

	    #define TROMPELOEIL_EXPERIMENTAL_COROUTINES
	    #include <trompeloeil/mock.hpp>
	    #include <trompeloeil/coro.hpp>

	  trompeloeil::stream_tracer does not produce correct result for
	  coroutines

	* Corrected output of input-range like types. Thank you Dominic Koepke for
	  the fix.

	* The self test program "custom_recursive_mutex" now says that it's
	  succeeded. Thank you @yurivict for reporting the confusion.

	* Self test programs are only build when explicitly setting
	  -DTROMPELOEIL_BUILD_TESTS=yes to the CMake command line.
